--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -33,7 +33,7 @@ aux_links:
   "Ableton Live 11 Python Framework": "https://github.com/bcrowe306/MPC-Studio-Mk2-Midi-Sysex-Charts"
   "Ableton Live 11 API": "https://github.com/bcrowe306/MPC-Studio-Mk2-Midi-Sysex-Charts"
 # Build settings
-remote_theme: "just-the-docs"
+remote_theme: just-the-docs/just-the-docs
 plugins:
   - jekyll-feed
 
