--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -26,16 +26,14 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  bcrowe306
 aux_links:
   "MPC Studio Mk2 Midi Charts": "https://github.com/bcrowe306/MPC-Studio-Mk2-Midi-Sysex-Charts"
   "Ableton Live 11 Python Framework": "https://github.com/bcrowe306/MPC-Studio-Mk2-Midi-Sysex-Charts"
   "Ableton Live 11 API": "https://github.com/bcrowe306/MPC-Studio-Mk2-Midi-Sysex-Charts"
 # Build settings
 remote_theme: just-the-docs/just-the-docs
-plugins:
-  - jekyll-feed
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
